# GMRES-Learning-CPP

./: .gitignore  CMakeLists.txt  OfflineGMRES.cpp  README.md
4CNNScalar/: PlotTimeResults.ipynb  build_k.sh  inputs_3d_test  main.cpp  main_driver.cpp  yt_plots.ipynb
4CNNScalar/TestData/: PlotTimeResults.ipynb
IncompressbleCNN/: README.md  inputs_3d_test  main_driver.cpp
OfflineExample/: CMakeLists.txt  OfflineGMRES.cpp  build.sh
PressureDemo/: PlotTimeResults.ipynb  inputs_3d_test  main_driver.cpp
WrapperIdeas/: WrapExample1_Lambda.cpp  WrapExample2_Lambda.cpp  WrapExample3_overload.cpp  a.out
WrapperIdeas/TemplateEx/: TemplateEx1.cpp  TemplateEx2.cpp  TemplateEx3.cpp  TemplateEx4.cpp
WrapperIdeas/Variadic/: VarFuncTemplate.cpp  a.out
demo/: .gitignore  Backtrace.0.0  CMakeLists.txt  PlotTimeResults.ipynb  TimeData.txt  TimeDataDirect.txt  build.fish  ib_marker_data.0.0  inputs_3d_test  main.cpp  main.ex  main_driver.H  main_driver.cpp  test.txt  yt_plots.ipynb
demo/TestData/13Box/: TimeData.txt  TimeDataDirect.txt
demo/TestData/13BoxResidFix/: PlotTimeResults.ipynb
demo/plt0000000/: Header
demo/plt0000000/Level_0/: Cell_D_00000  Cell_H
demo/plt0000001/Level_0/: Cell_D_00000  Cell_H
demo/plt0000001/immbdy_markers/: Header
lib_hydroTorchExample/: CMakeLists.txt  CNN_Model_20x20.pt  main.cpp  main.ex
util/: README.md  amrex_interfaces.cpp  amrex_interfaces.h  arg_pack.h  test_arg_pack.cpp  test_wrapper.cpp  wrapper.h
